--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "webpack": "^1.12.12"
   },
   "dependencies": {
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-router-dom": "^4.1.2"
   }
 }
