--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "webpack": "^1.12.12"
   },
   "dependencies": {
+    "radium": "^0.19.4",
     "react": "^15.6.1",
+    "react-bootstrap": "^0.31.1",
     "react-dom": "^15.6.1",
+    "react-fontawesome": "^1.6.1",
     "react-router-dom": "^4.1.2"
   }
 }
