--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "webpack": "^1.12.12"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "radium": "^0.19.4",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.1",
